--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "date-fns": "^3.6.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
-    "next": "13.4.8",
+    "next": "^14.1.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-datepicker": "^4.16.0",
